# robotics1

./: README.md
robotics2/exercise00/: sampleanimation2.txt  samplemodel.lua
robotics2/exercise_06/Cart_Pendulum_Template/: model.lua
robotics2/exercise_06/Cart_Pendulum_Template/SRC/: cart_pendulum.cc  strict.lua
robotics2/exercise_06/Cart_Pendulum_Template/doc/: setup_cart_pendulum.aux  setup_cart_pendulum.tex
robotics2/exercise_06/RocketCar_Template/DAT/: rocketcar.dat.save
robotics2/exercise_06/RocketCar_Template/SRC/: rocketcar.cc
robotics2/exercise_06/RocketCar_Template/doc/: setup_rocket_car.tex
robotics2/exercises_01/exercise01/: animation.csv  humanoid_animation.txt  humanoid_model.lua  pendulum.lua  pendulum.txt
robotics2/exercises_01/exercise01/rbdl/: main.cpp
robotics2/exercises_01/exercise01/rbdl/models/: humanoid_model.lua
robotics2/exercises_02/exercise02/IVP/: CMakeLists.txt
robotics2/exercises_02/exercise02/IVP/CMake/modules/: copySrc.cmake
robotics2/exercises_02/exercise02/IVP/src/: main_2.1.cc  main_2.2.cc
robotics2/exercises_02/exercise02/IVP/src/SimpleMath/: SimpleMath.h  SimpleMathDynamic.h  compileassert.h
robotics2/exercises_02/exercise02/icub/: main.cpp
robotics2/exercises_02/exercise02/icub/models/: iCubHeidelberg01.lua
robotics2/exercises_03/exercise03/icub2/: CMakeLists.txt  main.cpp
robotics2/exercises_03/exercise03/icub2/models/: iCubHeidelberg01.lua
robotics2/exercises_04/exercise04/: exercise04.ipynb
robotics2/exercises_04/exercise04/.ipynb_checkpoints/: exercise04-checkpoint.ipynb
robotics2/exercises_05/exercise05/BVP/: CMakeLists.txt  README
robotics2/exercises_05/exercise05/BVP/DAT/: bvp1.dat.save
robotics2/exercises_05/exercise05/BVP/SRC/: bvp1.cc  bvp2.cc  bvp3.cc  bvp4.cc
robotics2/exercises_06/Cart_Pendulum_Template/: CMakeLists.txt  model.lua
robotics2/exercises_06/Cart_Pendulum_Template/CMake/: FindRBDL.cmake
robotics2/exercises_06/Cart_Pendulum_Template/SRC/: LuaTypes.h  cart_pendulum.cc  datfileutils.h  utils.cc
robotics2/exercises_06/RocketCar_Template/: CMakeLists.txt
robotics2/exercises_07/exercise07/Hopping_robot/: CMakeLists.txt  default.plot  hoppingrobot.lua
robotics2/exercises_07/exercise07/Hopping_robot/CMake/Modules/: BuildPaths.cmake
robotics2/exercises_07/exercise07/Hopping_robot/SRC/: hoppingrobot.cc
robotics2/exercises_07/exercise07/Hopping_robot/doc/: hoppingrobot.eps  phase_overview.eps  problem.aux  problem.tex  problem.tex.backup
robotics2/exercises_08/exercise08/iCubSquat/: CMakeLists.txt  iCubHeidelberg01.lua
robotics2/exercises_08/exercise08/iCubSquat/SRC/: icub.cc
sheet00/exercise00/eigen/: CMakeLists.txt  main.cpp
sheet00/exercise00/meshup/: sampleanimation.txt  samplemodel.lua
sheet01/exercise01/inverse_kinematic/: CMakeLists.txt  main.cpp
sheet01/exercise01/visualization/: animation.csv
sheet02/: readme.txt
sheet02/exercise02/single_pendulum/: CMakeCache.txt  CMakeLists.txt  Makefile  animation.csv  answers.txt  cmake_install.cmake  main.cpp  single_pendulum
sheet02/exercise02/single_pendulum/config/: motion-singlePendulum.txt  singlePendulum.lua
sheet03/: main.cpp
sheet03/exercise03/: CMakeCache.txt  CMakeLists.txt  Makefile  animation.txt  animation_with_tcp.txt  cmake_install.cmake  kuka.lua  kuka_kin  main.cpp
sheet04/exercise04/kuka_rbdl/: CMakeLists.txt  kuka+cube.lua  main.cpp
sheet05/exercise05/bouncing_ball/: CMakeLists.txt  main.cpp
sheet05/exercise05/bouncing_ball/config/: motion-bouncing_ball.txt
sheet06/exercise06/: double_pendulum.lua  main.cpp
sheet07/: main.cpp  rampfunction.cpp
sheet10/: main.cpp
