CMAKE_MINIMUM_REQUIRED ( VERSION 2.6 )

PROJECT( "cart_pendulum" CXX C )

LIST( APPEND CMAKE_MODULE_PATH
	${PROJECT_SOURCE_DIR}/CMake
	${PROJECT_SOURCE_DIR}/CMake/Modules
)

INCLUDE( SimOptDefaults )

FIND_PACKAGE( MUSCOD REQUIRED )  # find and include "MUSCODConfig.cmake"
IF( MUSCOD_FOUND )
	INCLUDE( ${MUSCOD_USE_FILE} )
ENDIF( MUSCOD_FOUND )

FIND_PACKAGE ( PGPLOT REQUIRED )
FIND_PACKAGE ( RBDL REQUIRED )
FIND_PACKAGE ( Eigen3 3.0.0 )

INCLUDE_DIRECTORIES ( ${RBDL_INCLUDE_DIR} ${EIGEN3_INCLUDE_DIR} )

###################################################################

ADD_LIBRARY ( cart_pendulum
	SRC/cart_pendulum.cc
	)

TARGET_LINK_LIBRARIES (
	cart_pendulum
	${RBDL_LIBRARY}
	${RBDL_LUAMODEL_LIBRARY}
	${PGPLOT_CPGPLOT_LIBRARY}
	${PGPLOT_PGPLOT_LIBRARY}
	)



# COMMANDS TO BUILD DIRECTORY TREE #############################################

EXECUTE_PROCESS(COMMAND mkdir -p ./RES)
EXECUTE_PROCESS(COMMAND ln -s -f ${PROJECT_SOURCE_DIR}/SRC)
EXECUTE_PROCESS(COMMAND ln -s -f ${PROJECT_SOURCE_DIR}/DAT)
EXECUTE_PROCESS(COMMAND ln -s -f ${PROJECT_SOURCE_DIR}/model.lua)
EXECUTE_PROCESS(COMMAND ln -s -f ${PROJECT_SOURCE_DIR}/default.plot)

