CMAKE_MINIMUM_REQUIRED ( VERSION 2.6 )

PROJECT( "muscod_hoppingrobot_application" CXX )

LIST( APPEND CMAKE_MODULE_PATH
	${PROJECT_SOURCE_DIR}/CMake
	${PROJECT_SOURCE_DIR}/CMake/Modules
)

INCLUDE( SimOptDefaults )

FIND_PACKAGE (RBDL REQUIRED)
FIND_PACKAGE (Eigen3 3.0.0 REQUIRED)
INCLUDE_DIRECTORIES ( ${RBDL_INCLUDE_DIR} ${EIGEN3_INCLUDE_DIR} )

FIND_PACKAGE( MUSCOD REQUIRED )  # find and include "MUSCODConfig.cmake"
IF( MUSCOD_FOUND )
	INCLUDE( ${MUSCOD_USE_FILE} )
ENDIF( MUSCOD_FOUND )



ADD_LIBRARY ( ICUB
	SRC/icub.cc
	)
TARGET_LINK_LIBRARIES ( ICUB
	${RBDL_LIBRARIES}
)
SET_TARGET_PROPERTIES( ICUB PROPERTIES
  OUTPUT_NAME "iCubSquat" )


EXECUTE_PROCESS(COMMAND mkdir -p ./RES)
EXECUTE_PROCESS(COMMAND ln -s -f ${PROJECT_SOURCE_DIR}/SRC)
EXECUTE_PROCESS(COMMAND ln -s -f ${PROJECT_SOURCE_DIR}/DAT)
EXECUTE_PROCESS(COMMAND ln -s -f ${PROJECT_SOURCE_DIR}/iCubHeidelberg01.lua)
EXECUTE_PROCESS(COMMAND ln -s -f ${PROJECT_SOURCE_DIR}/default.plot)

